scss/partials/_company_header.scss
div.company-header{
  background-color: white;

  div.navbar-editing {
    width: 100%;
    height: 50px;
    background-color: white;
    position: fixed;
    top: 0px;
    z-index: 2;

    button {
      margin-top: 15px;
      font-size: 16px;
      color: $oc_blue;
      &.cancel-bt {
        float: left;
        margin-left: 30px;
      }

      &.save-bt {
        float: right;
        margin-right: 30px;
      }
    }
  }

  div.company-header-internal {
    @include big_web(){
      max-width: 910px;
      margin: 0 auto;
      min-height: 120px;
    }

    div.company-header-top {
      padding-top: 22px;

      div.company-logo-container{
        float: left;

        @include mobile(){
          margin-left: 20px;
        }

        img.company-logo {
          max-width: 200px;
          max-height: 50px;
        }
      }

      div.buttons-container {
        padding-right: 15px;
        width: 160px;
        float: right;
        text-align: right;

        button.oc-btn {
          width: 25px;
          height: 21px;
          margin: 0px;
          padding: 0px;
          border: 0px;
          outline: none;

          &.vert-ellipse {
            background-image: url("/img/3dots.png");
            background-size: 25px 25px;
            background-position: 0px 0px;
            width: 25px;
            height: 25px;

            &:hover, &:active, &:focus {
              background-color: white;
              border: 0px solid black;
              outline: none;
              box-shadow: none;
            }

            & span.caret {
              display: none;
            }
          }
        }
      }
    }

    div.company-name-container {

      @include mobile(){
        width: 100%;
        top: 0px;
        left: 0px;
        z-index: 2;
      }

      div.company-name {
        text-align: left;
        color: #2d2d2d;
        font-size: 24px;
        line-height: 0.9;
        background-color: inherit;

        @include mobile(){
          padding-left: 20px;
          padding-top: 20px;
          padding-bottom: 9px;
          height: 46px;
          font-weight: regular;
          background-color: white;
        }

        @include big_web(){
          padding-top: 10px;
          font-weight: 600;
        }
      }
    }

    div.company-description-container {

      @include mobile(){
        width: 100%;

        a.nav-link {
          display: none;
        }
      }

      @include big_web() {
        padding-bottom: 34px;
      }

      div.company-description {
        text-align: left;
        color: #2d2d2d;

        @include mobile(){
          margin-top: 15px;
          margin-bottom: 20px;
          margin-left: 20px;
          padding-top: 0px;
          font-size: 16px;
        }

        @include big_web(){
          width: 355px;
          padding-top: 5px;
          font-size: 14px;
          line-height: 1.3;
        }
      }
    }
  }
}

